--- a/styles/main.css
+++ b/styles/main.css
@@ -1547,6 +1547,7 @@ header .menuElem li a:before {
     transform: translate(0, -50%);
     padding: 15px;
     text-align: center;
+    left: 0;
 }
 
 .home-banner-text p {
@@ -2305,15 +2306,19 @@ body .contact-mobile-form input[type=button] {
     text-align: center;
 }
 
-.home-section10 span {
+.home-section10 span,
+.home-section9 span,
+.home-section8 span,
+.home-section7 span,
+.home-section1 span{
     text-align: center;
     z-index: 9999;
     position: relative;
     /*text-shadow: 3px 3px #9b9990;*/
-    background: rgba(110, 110, 110, 0.3);
-    font-size: 52px;
+    background: rgba(0, 198, 186, 0.54);
     font-family: 'Unica One', sans-serif;
     text-transform: uppercase;
+    padding: 0 15px;
 }
 
 .home-section6 {
